--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -41,7 +41,7 @@
 	// "shutdownAction": "none",
 
 	// Uncomment the next line to run commands after the container is created.
-	// "postCreateCommand": "cat /etc/os-release",
+	"postCreateCommand": "apt-get update && apt-get install wget unzip",
 
 	// Configure tool-specific properties.
 	"customizations": {
@@ -49,9 +49,11 @@
 			"extensions": [
 				"ms-python.python",
 				"ms-toolsai.jupyter",
-				"ms-python.vscode-pylance",
 				"mhutchie.git-graph",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"GitHub.copilot",
+				"ms-python.vscode-pylance",
+				"ms-azuretools.vscode-docker"
 			]
 		}
 	}
