--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
               capabilities: [ gpu ]
     volumes:
       - /home/mohitm/datasets/stanford_cars/cars_train/cars_train:/app/data/cars_train
-      - /home/mohitm/dataset/stanford_cars/cars_test/cars_test:/app/data/cars_test
-      # - .:/app
+      - /home/mohitm/datasets/stanford_cars/cars_test/cars_test:/app/data/cars_test
+      - .:/app
 
     command: [ "python", "training.py" ]
