--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,7 @@
 		},
 		"ghcr.io/devcontainers/features/python:1": {
 			"installTools": true,
-			"version": "3.11"
+			"version": "3.10"
 		}
 	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
@@ -33,7 +33,7 @@
 	// Uncomment the next line if you want to keep your containers running after VS Code shuts down.
 	// "shutdownAction": "none",
 	// Uncomment the next line to run commands after the container is created.
-	"postCreateCommand": "apt-get update && apt-get install -y wget unzip openssh-client",
+	"postCreateCommand": "apt-get update && apt-get install -y wget unzip openssh-client libgl1-mesa-glx",
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
